--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - docker tag pipelinenode:latest 136463801480.dkr.ecr.us-east-1.amazonaws.com/pipelinenode:latest
       - REPOSITORY_URI=136463801480.dkr.ecr.us-east-1.amazonaws.com/pipelinenode
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
