--- a/buildspec.yml
+++ b/buildspec.yml
@@ -40,6 +40,7 @@ phases:
 artifacts:
   files:
     #archivos a ocupar
+    - imagedefinitions.json
     - src/*
     - package.json
     - Dockerfile
